tests/should_fail/type_int_minus_float.nv
module main

// SHOULD FAIL: subtract Float from Int (type mismatch)
fn test() -> Int {
    return 10 - 3.0
}
println(test())
